; ModuleID = '/home/carl/AnghaBench/disque/src/extr_queue.c_handleClientsBlockedOnQueues.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_queue.c_handleClientsBlockedOnQueues.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_17__ = type { i32 }
%struct.TYPE_14__ = type { i32 }
%struct.TYPE_15__ = type { %struct.TYPE_16__* }
%struct.TYPE_16__ = type { %struct.TYPE_13__ }
%struct.TYPE_13__ = type { i32 }

@server = common dso_local global %struct.TYPE_17__ zeroinitializer, align 4
@NEEDJOBS_REACHED_ZERO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @handleClientsBlockedOnQueues() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_14__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_15__*, align 8
  %7 = alloca %struct.TYPE_16__*, align 8
  %8 = alloca i32*, align 8
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_17__, %struct.TYPE_17__* @server, i32 0, i32 0), align 4
  %10 = call i64 @dictSize(i32 %9)
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %0
  br label %79

13:                                               ; preds = %0
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_17__, %struct.TYPE_17__* @server, i32 0, i32 0), align 4
  %15 = call i32* @dictGetIterator(i32 %14)
  store i32* %15, i32** %2, align 8
  br label %16

16:                                               ; preds = %73, %31, %13
  %17 = load i32*, i32** %2, align 8
  %18 = call i32* @dictNext(i32* %17)
  store i32* %18, i32** %1, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %74

20:                                               ; preds = %16
  %21 = load i32*, i32** %1, align 8
  %22 = call i32 @dictGetKey(i32* %21)
  %23 = call %struct.TYPE_14__* @lookupQueue(i32 %22)
  store %struct.TYPE_14__* %23, %struct.TYPE_14__** %3, align 8
  %24 = load %struct.TYPE_14__*, %struct.TYPE_14__** %3, align 8
  %25 = icmp ne %struct.TYPE_14__* %24, null
  br i1 %25, label %26, label %31

26:                                               ; preds = %20
  %27 = load %struct.TYPE_14__*, %struct.TYPE_14__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %32, label %31

31:                                               ; preds = %26, %20
  br label %16

32:                                               ; preds = %26
  %33 = load %struct.TYPE_14__*, %struct.TYPE_14__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @listLength(i32 %35)
  store i32 %36, i32* %4, align 4
  br label %37

37:                                               ; preds = %61, %32
  %38 = load i32, i32* %4, align 4
  %39 = add nsw i32 %38, -1
  store i32 %39, i32* %4, align 4
  %40 = icmp ne i32 %38, 0
  br i1 %40, label %41, label %73

41:                                               ; preds = %37
  %42 = load %struct.TYPE_14__*, %struct.TYPE_14__** %3, align 8
  %43 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call %struct.TYPE_15__* @listFirst(i32 %44)
  store %struct.TYPE_15__* %45, %struct.TYPE_15__** %6, align 8
  %46 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %47 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %46, i32 0, i32 0
  %48 = load %struct.TYPE_16__*, %struct.TYPE_16__** %47, align 8
  store %struct.TYPE_16__* %48, %struct.TYPE_16__** %7, align 8
  %49 = load %struct.TYPE_14__*, %struct.TYPE_14__** %3, align 8
  %50 = call i32* @queueFetchJob(%struct.TYPE_14__* %49, i64* %5)
  store i32* %50, i32** %8, align 8
  %51 = load i32*, i32** %8, align 8
  %52 = icmp ne i32* %51, null
  br i1 %52, label %54, label %53

53:                                               ; preds = %41
  br label %73

54:                                               ; preds = %41
  %55 = load i64, i64* %5, align 8
  %56 = icmp eq i64 %55, 0
  br i1 %56, label %57, label %61

57:                                               ; preds = %54
  %58 = load %struct.TYPE_14__*, %struct.TYPE_14__** %3, align 8
  %59 = load i32, i32* @NEEDJOBS_REACHED_ZERO, align 4
  %60 = call i32 @needJobsForQueue(%struct.TYPE_14__* %58, i32 %59)
  br label %61

61:                                               ; preds = %57, %54
  %62 = load %struct.TYPE_16__*, %struct.TYPE_16__** %7, align 8
  %63 = call i32 @addReplyMultiBulkLen(%struct.TYPE_16__* %62, i32 1)
  %64 = load %struct.TYPE_16__*, %struct.TYPE_16__** %7, align 8
  %65 = load i32*, i32** %8, align 8
  %66 = load %struct.TYPE_16__*, %struct.TYPE_16__** %7, align 8
  %67 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %66, i32 0, i32 0
  %68 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %67, i32 0, i32 0
  %69 = load i32, i32* %68, align 4
  %70 = call i32 @addReplyJob(%struct.TYPE_16__* %64, i32* %65, i32 %69)
  %71 = load %struct.TYPE_16__*, %struct.TYPE_16__** %7, align 8
  %72 = call i32 @unblockClient(%struct.TYPE_16__* %71)
  br label %37

73:                                               ; preds = %53, %37
  br label %16

74:                                               ; preds = %16
  %75 = load i32*, i32** %2, align 8
  %76 = call i32 @dictReleaseIterator(i32* %75)
  %77 = load i32, i32* getelementptr inbounds (%struct.TYPE_17__, %struct.TYPE_17__* @server, i32 0, i32 0), align 4
  %78 = call i32 @dictEmpty(i32 %77, i32* null)
  br label %79

79:                                               ; preds = %74, %12
  ret void
}

declare dso_local i64 @dictSize(i32) #1

declare dso_local i32* @dictGetIterator(i32) #1

declare dso_local i32* @dictNext(i32*) #1

declare dso_local %struct.TYPE_14__* @lookupQueue(i32) #1

declare dso_local i32 @dictGetKey(i32*) #1

declare dso_local i32 @listLength(i32) #1

declare dso_local %struct.TYPE_15__* @listFirst(i32) #1

declare dso_local i32* @queueFetchJob(%struct.TYPE_14__*, i64*) #1

declare dso_local i32 @needJobsForQueue(%struct.TYPE_14__*, i32) #1

declare dso_local i32 @addReplyMultiBulkLen(%struct.TYPE_16__*, i32) #1

declare dso_local i32 @addReplyJob(%struct.TYPE_16__*, i32*, i32) #1

declare dso_local i32 @unblockClient(%struct.TYPE_16__*) #1

declare dso_local i32 @dictReleaseIterator(i32*) #1

declare dso_local i32 @dictEmpty(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
